# spt-webui

./: .gitignore  README.md  alembic.ini  deploy.sh  flake.nix  pyproject.toml
alembic/: env.py
alembic/versions/: 620b6a364273_inital_dummy_revision.py  7d36833c6b32_add_requested_songs_to_spotify_playlist_.py  c1c3d15f1042_create_spotify_songs_table.py
nix/: module.nix
spt-webui-backend/: Cargo.toml  settings.example.json
spt-webui-backend/src/: main.rs
spt-webui-backend/src/api/: auth.rs  mod.rs
spt-webui-backend/src/entities/: mod.rs  prelude.rs  requested_spotify_songs.rs  requested_spotify_songs_artist_connections.rs  requested_spotify_songs_artists.rs  song_requests.rs  users.rs
spt-webui-frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  tsconfig.json
spt-webui-frontend/src/: index.html  styles.sass
spt-webui-frontend/src/app/: app.component.html  app.component.sass  app.component.ts  app.config.ts  app.routes.ts  auth.interceptor.ts  notifications.service.ts
spt-webui-frontend/src/app/api-services/: models.ts  spt-web-ui-api-wrapper.service.spec.ts  spt-web-ui-api-wrapper.service.ts  stats-state-service.service.spec.ts  stats-state.service.ts
spt-webui-frontend/src/app/app-popular-tracks-list/: app-popular-tracks-list.component.html  app-popular-tracks-list.component.spec.ts  app-popular-tracks-list.component.ts
spt-webui-frontend/src/app/header/: header.component.html  header.component.sass  header.component.ts
spt-webui-frontend/src/app/icon/: icon.component.html  icon.component.sass  icon.component.ts
spt-webui-frontend/src/app/notification-list/: notification-list.component.html  notification-list.component.sass  notification-list.component.ts
spt-webui-frontend/src/app/playback-state-display/: playback-state-display.component.html  playback-state-display.component.sass  playback-state-display.component.spec.ts  (+1 more)
spt-webui-frontend/src/environments/: environment.ts
spt_webui_backend/: __init__.py  __main__.py  environment.py  main.py  oauth2.py  schemas.py  security.py  spotify.py
spt_webui_backend/database/: __init__.py  alembic.ini  crud.py  migrate.py  models.py
spt_webui_backend/database/alembic_scripts/: env.py
(+21 files in other folders)
