[project]
name = "spt-webui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16",
    "fastapi>=0.116",
    "itsdangerous>=2.2.0",
    "oauthlib>=3.3.1",
    "pydantic-settings>=2.10.0",
    "pymysql>=1.1.0",
    "requests-oauthlib>=2.0.0",
    "sentry-sdk>=2.34.0",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.37.0",
]

[project.scripts]
spt_webui_backend = "spt_webui_backend.__main__:main"


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
"*" = ["*.ini"]
