[package]
name = "spt-webui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
sea-orm = {version =  "1.1.0", features = ["runtime-tokio", "sqlx-mysql"] }
tokio = { version = "1.41.1", features = ["rt", "rt-multi-thread", "macros"] }
rocket = { version = "0.5.1", features = ["default", "serde_json", "json"] }
rocket_okapi = { version = "0.9.0" , features = ["swagger"]}
serde = { version = "1.0.215" , features = ["derive"]}
serde_json = "1.0.132"