[package]
name = "spt-webui-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
poem = { version = "3.1.3" }
poem-openapi = { version = "5.1.2", features = ["swagger-ui"] }
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["std"] }

url = "2.5.3"
dotenv = "0.15.0"

